# masif-neosurf

./: .gitignore  README.md  pyproject.toml
ui/: .env.example  .gitignore  README.md  app.py  docker-compose.yml  email_notification_service.py  masif-email-service.service  pyproject.toml  requirements.txt  test_docker_management.py  test_pymol_config.py  test_pymol_script.py  test_session_cleanup.py
ui/data/: README.md
ui/docs/: DEPLOYMENT_CHECKLIST.md  DOCKER_AUTO_MANAGEMENT.md  DOCKER_AUTO_MANAGEMENT_SUMMARY.md  EMAIL_SERVICE_README.md  PYMOL_FINAL_SUMMARY.md  PYMOL_FIXES.md  PYMOL_IMPLEMENTATION_SUMMARY.md  PYMOL_INTEGRATION.md  PYMOL_USER_GUIDE.md  README.md  SOFT_DELETE_FEATURE.md
ui/logs/: README.md
ui/pymol_in_browser/: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  startup.sh
ui/scripts/: README.md  assign_jobs_to_user.py  check_email_service.sh  check_module_commands.py  check_module_structure.py  check_singularity_simple.py  check_wrapper_content.py  debug_module_path.py  find_lmod.py  find_module_file.py  find_module_init.py  find_singularity.py  find_singularity_binary.py  find_singularity_path.py  find_wrapper_scripts.py  start_email_service.sh  stop_email_service.sh  test_email_notification.sh  test_final_module.py  test_module_load.py  test_slurm_script.py  test_ssh_connection.py  verify_module.py
ui/templates/: admin.html  admin_deleted_jobs.html  base.html  change_password.html  examples.html  forgot_password.html  help.html  index.html  job_details.html  jobs.html  login.html  (+3 more)
(+17 files in other folders)
