[project]
dependencies = []
name = "masif-neosurf"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
masif_neosurf = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
paramiko = ">=4.0.0,<5"
python-dotenv = ">=1.2.1,<2"
